# Kronos3D

./: .gitignore  AGENT_CONTEXT.md  CMakeLists.txt  PROGRESS.md  README.md  release.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/kronos3d/: GLSurfaceManager.kt  KronosGLSurfaceView.kt  MainActivity.kt
app/src/main/java/com/kronos3d/ui/: KronosGLSurfaceView.kt  MainActivity.kt
app/src/main/java/com/kronos3d/ui/hud/: HudOverlay.kt
app/src/main/java/com/kronos3d/ui/panels/: PropertiesPanel.kt
app/src/main/java/com/kronos3d/ui/toolbar/: ToolbarManager.kt
app/src/main/res/values/: styles.xml
engine/mesh/: mesh.cpp  mesh.h  mesh_ops.cpp  mesh_select.cpp
engine/render/: gizmo.cpp  gizmo.h  overlay.cpp  overlay.h  shader.cpp  shader.h  viewport.cpp  viewport.h
engine/render/shaders/: mesh.frag  mesh.vert  overlay.vert
gradle/: libs.versions.toml
